feat: add AdminInitializer for automatic super admin creation; update application.yaml for admin credentials configuration and extend Role enum with ROLE_ADMIN